[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game Assets/Rooms/roomtrigger.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/Rooms/roomscript.gd" type="Script" id=2]
[ext_resource path="res://Game Assets/Rooms/doorcheck.gd" type="Script" id=3]

[sub_resource type="NavigationMesh" id=2]
vertices = PoolVector3Array( -40, 20.5, -13.75, -40, 20.5, -5, -39.75, 20.5, -13.5, 29.5, 20.5, -39.75, 39.5, 20.5, -39.75, 29.75, 20.5, -40, -40, 20.5, -13.75, -39.75, 20.5, -13.5, -39.75, 20.5, -22.25, -40, 20.5, -22.5, 29.5, 20.5, -39.75, 29.75, 20.5, -40, 19.75, 20.5, -40, 19.75, 20.5, -39.75, -40, 20.5, -22.5, -39.75, 20.5, -22.25, -39.75, 20.5, -31, -40, 20.5, -31.25, -0.25, 20.5, -40, -10.25, 20.5, -40, -10, 20.5, -39.75, 0, 20.5, -39.75, -40, 20.5, -31.25, -39.75, 20.5, -31, -39.5, 20.5, -39.75, -40, 20.5, -39.75, 9.75, 20.5, -39.75, 19.75, 20.5, -39.75, 19.75, 20.5, -40, 9.75, 20.5, -40, -30.25, 20.5, -40, -40, 20.5, -39.75, -39.5, 20.5, -39.75, -30.25, 20.5, -40, -39.5, 20.5, -39.75, -29.75, 20.5, -39.75, -20.25, 20.5, -40, -30.25, 20.5, -40, -29.75, 20.5, -39.75, -19.75, 20.5, -39.75, 0, 20.5, -39.75, 9.75, 20.5, -39.75, 9.75, 20.5, -40, -0.25, 20.5, -40, -10.25, 20.5, -40, -20.25, 20.5, -40, -19.75, 20.5, -39.75, -10, 20.5, -39.75, 39, 0.5, 4.75, 39.5, 0.5, 4.5, 39.5, 0.5, -4.25, -39.5, 0.5, -4.25, -39.5, 0.5, 4.5, -38.75, 0.5, 4.75, -38.75, 0.5, -4.5, -4.5, 0.5, 39, -4.25, 0.5, 39.75, 4.5, 0.5, 39.75, 4.75, 0.5, 39, 4.5, 0.5, -38.75, 4.25, 0.5, -39.5, -4.5, 0.5, -39.5, -4.75, 0.5, -38.75, -13.25, 0.5, -38.75, -38.75, 0.5, -21.75, -38.75, 0.5, -13.25, -4.75, 0.5, -38.75, 39, 0.5, 4.75, 39.5, 0.5, -4.25, 39, 0.5, -4.5, 4.75, 0.5, 39, 13.25, 0.5, 39, 21.75, 0.5, 39, 39, 0.5, 21.75, 39, 0.5, 13.25, -4.75, 0.5, -38.75, -38.75, 0.5, -13.25, -38.75, 0.5, -4.5, 4.5, 0.5, -38.75, -30.25, 0.5, -38.75, -38.75, 0.5, -38.75, -38.75, 0.5, -30.25, -38.75, 0.5, 30.25, -38.75, 0.5, 39, -30.25, 0.5, 39, 39, 0.5, -30.25, 39, 0.5, -38.75, 30.25, 0.5, -38.75, 30.25, 0.5, 39, 39, 0.5, 39, 39, 0.5, 30.25, -21.75, 0.5, -38.75, -30.25, 0.5, -38.75, -38.75, 0.5, -30.25, -38.75, 0.5, 30.25, -30.25, 0.5, 39, -21.75, 0.5, 39, -38.75, 0.5, 21.75, 39, 0.5, -21.75, 39, 0.5, -30.25, 30.25, 0.5, -38.75, 21.75, 0.5, -38.75, 21.75, 0.5, 39, 30.25, 0.5, 39, 39, 0.5, 30.25, 39, 0.5, 21.75, -21.75, 0.5, -38.75, -38.75, 0.5, -30.25, -38.75, 0.5, -21.75, -13.25, 0.5, -38.75, -38.75, 0.5, 4.75, -4.5, 0.5, 39, 4.75, 0.5, 39, 39, 0.5, -4.5, 4.5, 0.5, -38.75, -38.75, 0.5, -4.5, 39, 0.5, -13.25, 13, 0.5, -38.75, 4.5, 0.5, -38.75, 39, 0.5, -4.5, -38.75, 0.5, 4.75, -38.75, 0.5, 13.25, -13.25, 0.5, 39, -4.5, 0.5, 39, 4.75, 0.5, 39, 13.25, 0.5, 39, 39, 0.5, 13.25, 39, 0.5, 4.75, -38.75, 0.5, 21.75, -21.75, 0.5, 39, -13.25, 0.5, 39, -38.75, 0.5, 13.25, 39, 0.5, -13.25, 39, 0.5, -21.75, 21.75, 0.5, -38.75, 13, 0.5, -38.75, -40, 20.5, 31.25, -39.75, 20.5, 39.75, -39.75, 20.5, 31, -39.75, 20.5, 13.5, -40, 20.5, 5.25, -40, 20.5, 13.75, -40, 20.5, 22.5, -40, 20.5, 31.25, -39.75, 20.5, 31, -39.75, 20.5, 22.25, -39.75, 20.5, 22.25, -39.75, 20.5, 13.5, -40, 20.5, 13.75, -40, 20.5, 22.5 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 9, 8, 6 ), PoolIntArray( 6, 8, 7 ), PoolIntArray( 13, 12, 10 ), PoolIntArray( 10, 12, 11 ), PoolIntArray( 17, 16, 14 ), PoolIntArray( 14, 16, 15 ), PoolIntArray( 21, 20, 18 ), PoolIntArray( 18, 20, 19 ), PoolIntArray( 25, 24, 22 ), PoolIntArray( 22, 24, 23 ), PoolIntArray( 29, 28, 26 ), PoolIntArray( 26, 28, 27 ), PoolIntArray( 32, 31, 30 ), PoolIntArray( 35, 34, 33 ), PoolIntArray( 39, 38, 36 ), PoolIntArray( 36, 38, 37 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 42, 40, 43 ), PoolIntArray( 47, 46, 44 ), PoolIntArray( 44, 46, 45 ), PoolIntArray( 50, 49, 48 ), PoolIntArray( 51, 54, 52 ), PoolIntArray( 52, 54, 53 ), PoolIntArray( 56, 55, 57 ), PoolIntArray( 57, 55, 58 ), PoolIntArray( 60, 59, 61 ), PoolIntArray( 61, 59, 62 ), PoolIntArray( 64, 63, 65 ), PoolIntArray( 65, 63, 66 ), PoolIntArray( 68, 67, 69 ), PoolIntArray( 69, 67, 70 ), PoolIntArray( 72, 71, 73 ), PoolIntArray( 73, 71, 74 ), PoolIntArray( 76, 75, 77 ), PoolIntArray( 77, 75, 78 ), PoolIntArray( 81, 80, 79 ), PoolIntArray( 84, 83, 82 ), PoolIntArray( 87, 86, 85 ), PoolIntArray( 90, 89, 88 ), PoolIntArray( 93, 92, 91 ), PoolIntArray( 95, 94, 96 ), PoolIntArray( 96, 94, 97 ), PoolIntArray( 99, 98, 100 ), PoolIntArray( 100, 98, 101 ), PoolIntArray( 103, 102, 104 ), PoolIntArray( 104, 102, 105 ), PoolIntArray( 107, 106, 108 ), PoolIntArray( 108, 106, 109 ), PoolIntArray( 110, 115, 111 ), PoolIntArray( 111, 115, 112 ), PoolIntArray( 112, 115, 114 ), PoolIntArray( 112, 114, 113 ), PoolIntArray( 117, 116, 118 ), PoolIntArray( 118, 116, 119 ), PoolIntArray( 121, 120, 122 ), PoolIntArray( 122, 120, 123 ), PoolIntArray( 125, 124, 126 ), PoolIntArray( 126, 124, 127 ), PoolIntArray( 129, 128, 130 ), PoolIntArray( 130, 128, 131 ), PoolIntArray( 133, 132, 134 ), PoolIntArray( 134, 132, 135 ), PoolIntArray( 138, 137, 136 ), PoolIntArray( 141, 140, 139 ), PoolIntArray( 145, 144, 142 ), PoolIntArray( 142, 144, 143 ), PoolIntArray( 149, 148, 146 ), PoolIntArray( 146, 148, 147 ) ]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 80, 80 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 38, 10, 38 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 5, 5, 10 )

[node name="Room" type="Spatial" groups=["Persist", "Rooms"]]
script = ExtResource( 2 )

[node name="Navigation" type="Navigation" parent="."]
unique_name_in_owner = true

[node name="NavMesh" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 2 )

[node name="Walls" type="Spatial" parent="Navigation/NavMesh"]

[node name="South Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
layers = 9
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/South Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/South Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="North Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
layers = 9
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/North Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/North Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="East Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
layers = 9
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/East Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/East Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="West Wall" type="CSGCombiner" parent="Navigation/NavMesh/Walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
layers = 9
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="Wall" type="CSGBox" parent="Navigation/NavMesh/Walls/West Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 40 )
width = 80.0
height = 20.0
depth = 1.0

[node name="Cutout" type="CSGBox" parent="Navigation/NavMesh/Walls/West Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 40 )
operation = 2
width = 10.0
height = 10.0
depth = 1.0

[node name="Floor" type="CSGMesh" parent="Navigation/NavMesh"]
use_collision = true
collision_layer = 7
collision_mask = 7
mesh = SubResource( 1 )

[node name="RoomTrigger" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="Trigger" type="Area" parent="RoomTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="Collision" type="CollisionShape" parent="RoomTrigger/Trigger"]
shape = SubResource( 3 )

[node name="DoorTriggers" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="WTrigger" type="Area" parent="DoorTriggers"]
transform = Transform( -4.09683e-06, 0, -1, 0, 1, 0, 1, 0, -4.09683e-06, 40, 5, 0.000163873 )

[node name="CollisionShape" type="CollisionShape" parent="DoorTriggers/WTrigger"]
shape = SubResource( 4 )

[node name="ETrigger" type="Area" parent="DoorTriggers"]
transform = Transform( -4.09683e-06, 0, -1, 0, 1, 0, 1, 0, -4.09683e-06, -40, 5, -0.000163873 )

[node name="CollisionShape" type="CollisionShape" parent="DoorTriggers/ETrigger"]
shape = SubResource( 4 )

[node name="NTrigger" type="Area" parent="DoorTriggers"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 5, -40 )

[node name="CollisionShape" type="CollisionShape" parent="DoorTriggers/NTrigger"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="STrigger" type="Area" parent="DoorTriggers"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 5, 40 )

[node name="CollisionShape" type="CollisionShape" parent="DoorTriggers/STrigger"]
shape = SubResource( 4 )

[connection signal="body_entered" from="RoomTrigger/Trigger" to="RoomTrigger" method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="DoorTriggers/WTrigger" to="DoorTriggers" method="_on_STrigger_body_entered"]
[connection signal="body_exited" from="DoorTriggers/WTrigger" to="DoorTriggers" method="_on_STrigger_body_exited"]
[connection signal="body_entered" from="DoorTriggers/ETrigger" to="DoorTriggers" method="_on_NTrigger_body_entered"]
[connection signal="body_exited" from="DoorTriggers/ETrigger" to="DoorTriggers" method="_on_NTrigger_body_exited"]
[connection signal="body_entered" from="DoorTriggers/NTrigger" to="DoorTriggers" method="_on_WTrigger_body_entered"]
[connection signal="body_exited" from="DoorTriggers/NTrigger" to="DoorTriggers" method="_on_WTrigger_body_exited"]
[connection signal="body_entered" from="DoorTriggers/STrigger" to="DoorTriggers" method="_on_ETrigger_body_entered"]
[connection signal="body_exited" from="DoorTriggers/STrigger" to="DoorTriggers" method="_on_ETrigger_body_exited"]
